h2 modificado para ScanCode

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="todoconteudo">
         <div class="a">
             <div class="b">
-                <h2>Bem-vindo ao ScanCode</h2>
+                <h2>ScanCode</h2>
                 <p>Escaneie códigos QR para adicionar os Chromebooks!</p>
             </div>
             <div class="container">
